--- a/docs/轨迹/有感之杂说.md
+++ b/docs/轨迹/有感之杂说.md
@@ -53,14 +53,14 @@ categories:
 
 #### 2.1.1、有感：如何有趣的坚持练字
 
-> **有感：如何有趣的坚持练字**？ 
-> - 每天坚持一件事，确实不容易。这周是单休，周末差点没练字，只想好好的休息。不过习惯的力量是强大的，一天不练字就感觉手痒。习惯驱使着行动坚持下去。  
-> - 不过如果只是练字，而不对比、琢磨、思考，确实非常单调枯燥无聊，容易放弃。所以有条件的话可以请老师，让专业人指点一下，这一点大部分自学者很难做到，我也是。因此要讲究科学、有趣的方法：
-> - 1、**比较**。练过的字帖草稿一定要保存，要把握自己的进展，认识自己真实水平。将自己当前的字帖和过去比，进步在哪里；和原版字帖，差距在哪里。需要心中有数。
-> - 2、**晒图**。人是群居动物，是社会性生物，肚里有点货，憋着不痛快，就想说出来，人之常情。如果练的时间短，写得差，不好意思在朋友圈晒，可以在豆瓣小组，头条，贴吧等等地方发帖晒图,这里都是陌生人，跌相也没事，而且这里菜鸟很多，大家的态度比较友好，鼓励居多。这些网站同道中人的小伙伴很多，大家相互交流，共同进步。
-> - 3、**伴乐**。练字的时候打开音乐，边听歌边练字。听着动听优美的歌曲，抒写美妙典雅的篇章，徜徉在历史与现代交汇的海洋中，感受传统与流行碰撞的激情。听歌练字，人生一大乐事。注意：歌曲声音不能太大，不能喧宾夺主，注意力要集中在练字上，歌曲只是背景，响亮动听的音乐驱走独处的寂寞。建议用音箱放歌，解放双手，推荐天猫精灵或者小爱同学。
-> - 4、**记录**。建立个人练习历程轨迹的文档，或者在豆瓣小组、贴吧坚持每天练字打卡晒图。这样一是督促自己坚持下去，同时反思不足，继续前进。二是若干年之后，学有所成之后，回首往事，点点滴滴都是美好的回忆。不会虚度年华而悔恨，不会碌碌无为而羞愧。
-> - 有意思有乐趣的事才能长久的坚持下去，然后才有成就有意义。**书法之道，贵之以恒**。
+- **有感：如何有趣的坚持练字**？ 
+- 每天坚持一件事，确实不容易。这周是单休，周末差点没练字，只想好好的休息。不过习惯的力量是强大的，一天不练字就感觉手痒。习惯驱使着行动坚持下去。  
+- 不过如果只是练字，而不对比、琢磨、思考，确实非常单调枯燥无聊，容易放弃。所以有条件的话可以请老师，让专业人指点一下，这一点大部分自学者很难做到，我也是。因此要讲究科学、有趣的方法：
+- 1、**比较**。练过的字帖草稿一定要保存，要把握自己的进展，认识自己真实水平。将自己当前的字帖和过去比，进步在哪里；和原版字帖，差距在哪里。需要心中有数。
+- 2、**晒图**。人是群居动物，是社会性生物，肚里有点货，憋着不痛快，就想说出来，人之常情。如果练的时间短，写得差，不好意思在朋友圈晒，可以在豆瓣小组，头条，贴吧等等地方发帖晒图,这里都是陌生人，跌相也没事，而且这里菜鸟很多，大家的态度比较友好，鼓励居多。这些网站同道中人的小伙伴很多，大家相互交流，共同进步。
+- 3、**伴乐**。练字的时候打开音乐，边听歌边练字。听着动听优美的歌曲，抒写美妙典雅的篇章，徜徉在历史与现代交汇的海洋中，感受传统与流行碰撞的激情。听歌练字，人生一大乐事。注意：歌曲声音不能太大，不能喧宾夺主，注意力要集中在练字上，歌曲只是背景，响亮动听的音乐驱走独处的寂寞。建议用音箱放歌，解放双手，推荐天猫精灵或者小爱同学。
+- 4、**记录**。建立个人练习历程轨迹的文档，或者在豆瓣小组、贴吧坚持每天练字打卡晒图。这样一是督促自己坚持下去，同时反思不足，继续前进。二是若干年之后，学有所成之后，回首往事，点点滴滴都是美好的回忆。不会虚度年华而悔恨，不会碌碌无为而羞愧。
+- 有意思有乐趣的事才能长久的坚持下去，然后才有成就有意义。**书法之道，贵之以恒**。
 --20201207
 
 ---
@@ -69,19 +69,19 @@ categories:
 
 #### 2.1.2、**阶段性反思**
 
-> - 感觉越来越差。对比元旦写的字，这十天貌似看不到一丝丝的进步。对比12月份貌似也没啥区别。可能进入了所谓的“瓶颈期”。吾日三省吾身，静坐常思己过。总结一下练字历程，反思原地踏步原因。&ensp;
-1、可能是练字时间不够，虽然基本坚持早晚各练习一小时，但是练习时长可能还是短了。&ensp;
-2、练习的方法可能有问题，工作日都是用水写布练字，只在周末一两天用墨水毛边纸练字。&ensp;
-3、临帖《多宝塔碑》的字较少，基本只是临摹水写布上的几十个字。&ensp;
-4、理论知识，基本没有涉猎。书法资料，书法视频看的很少。没有专业人员指导。
+- 感觉越来越差。对比元旦写的字，这十天貌似看不到一丝丝的进步。对比12月份貌似也没啥区别。可能进入了所谓的“瓶颈期”。吾日三省吾身，静坐常思己过。总结一下练字历程，反思原地踏步原因。<br />
+1、可能是练字时间不够，虽然基本坚持早晚各练习一小时，但是练习时长可能还是短了。<br />
+2、练习的方法可能有问题，工作日都是用水写布练字，只在周末一两天用墨水毛边纸练字。<br />
+3、临帖《多宝塔碑》的字较少，基本只是临摹水写布上的几十个字。<br />
+4、理论知识，基本没有涉猎。书法资料，书法视频看的很少。没有专业人员指导。<br />
 
-> - 方法有误，就要纠正。有则改之无则加勉。
-> - [ ] 第一条时间不够，这个貌似改不了，需要工作上班，早晚一小时已经算是挤出来的时间了。况且练字如果占用了工作的时间，会主次颠倒，目前工作还是更重要的，因为工作才有工资，维持生活才能追求梦想。而如果完全占用了娱乐的时间，会消磨我练字的兴趣，难以坚持练下去。早晚一小时，继续保持下去就好了。周末可以多练练。
-> - [ ] `第二条`感觉是练字原地踏步的主因，虽然水写布干净、方便、节约，耐用，但是毕竟不是纸张。写字在水写布上比较滑，字迹一会就消失了，跟写在纸上的感觉很不一样。况且长期使用水写布，腕力、用墨的习惯会与纸写脱节。因此如果要成为真正的书法家，少用不用水写布。
-> - [ ] 第三条临帖的字少，这个目前初始阶段不是啥大问题，质量比数量重要。
-> - [ ] `第四条`是长期且重要的工作，需要读一些书法书籍，与一些书法相关人士交流学习。周末可以去图书馆练字读书，也可以参加一些书法活动书法讲座。
+- 方法有误，就要纠正。有则改之无则加勉。
+- 第一条时间不够，这个貌似改不了，需要工作上班，早晚一小时已经算是挤出来的时间了。况且练字如果占用了工作的时间，会主次颠倒，目前工作还是更重要的，因为工作才有工资，维持生活才能追求梦想。而如果完全占用了娱乐的时间，会消磨我练字的兴趣，难以坚持练下去。早晚一小时，继续保持下去就好了。周末可以多练练。
+- `第二条`感觉是练字原地踏步的主因，虽然水写布干净、方便、节约，耐用，但是毕竟不是纸张。写字在水写布上比较滑，字迹一会就消失了，跟写在纸上的感觉很不一样。况且长期使用水写布，腕力、用墨的习惯会与纸写脱节。因此如果要成为真正的书法家，少用不用水写布。
+- 第三条临帖的字少，这个目前初始阶段不是啥大问题，质量比数量重要。
+- `第四条`是长期且重要的工作，需要读一些书法书籍，与一些书法相关人士交流学习。周末可以去图书馆练字读书，也可以参加一些书法活动书法讲座。
 
-> - **总结：早上可以用水写布练字，毕竟方便。晚上必须要用纸张墨水练字。周末要去图书馆读书，有空的话参加书法活动。专注才能专业。** --20210111
+- **总结：早上可以用水写布练字，毕竟方便。晚上必须要用纸张墨水练字。周末要去图书馆读书，有空的话参加书法活动。专注才能专业。** --20210111
 
 ---
 
@@ -89,8 +89,8 @@ categories:
 
 #### 2.1.3、人生四象限法则。未雨绸缪，把握重点。
 
->  本周（20210301-22010307）练字较少。生活中的琐事较多，工作、相亲、房子等等。心不在此，何以安定。--20210308 <br/>
->生活是动态的，人是变化的，不能时刻紧绷，要适当放松，书法是一种简单、实惠、合理、有深度的休闲方式。正如前几天我满心满脑的想着房子的事，想着提高技能、涨工资的事。但冲动期一过，冷静的想想，生活是一种平衡，需要不断学习也要适当放松。--20210312
+- 本周（20210301-22010307）练字较少。生活中的琐事较多，工作、相亲、房子等等。心不在此，何以安定。--20210308 <br/>
+- 生活是动态的，人是变化的，不能时刻紧绷，要适当放松，书法是一种简单、实惠、合理、有深度的休闲方式。正如前几天我满心满脑的想着房子的事，想着提高技能、涨工资的事。但冲动期一过，冷静的想想，生活是一种平衡，需要不断学习也要适当放松。--20210312
 
 ---
 
@@ -161,26 +161,34 @@ categories:
 
 > 心不静，字不正。貌似进入了疲惫期，现在练字也不能让我心静了。 --20210927  <br/>
 
+- 如何克服疲惫期呢？ <br/>
+疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。 <br/>
+首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。 <br/>
+
+- 克服疲惫期的方法如下： <br/>
+1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。 <br/>
+2、练习其他字体或者换其他字帖。  <br/>
+&ensp;&ensp;&ensp;以前练楷书的现在可以练行书、草书、隶书。  <br/>
+&ensp;&ensp;&ensp;以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。  <br/>
+&ensp;&ensp;&ensp;楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。 <br/>
+&ensp;&ensp;&ensp;也可以练练以前未临摹过的字。  <br/>
+&ensp;&ensp;&ensp;总之要保持一种新鲜感。  <br/>
+- 3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。 <br/>
+4、读一些关于书法的书籍。腹有诗书气自华。 <br/>
+5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。 <br/>
+6、参加书法活动。向书法大家请教。 <br/>
+- 7、扛过去，继续练。逢山开路，遇水搭桥。横冲直撞，一往无前。 <br/>
+8、记录，分析。记录书法练习历程、拆解细节、分析原因。 <br/>
+9、随缘，平常心，不偏执，不妄念。 <br/>
+
 ```
-如何克服疲惫期呢？
-疲惫期又称疲倦期、疲劳期，指长时间专注于某一项活动之后，对该项活动感觉枯燥乏味、热情消退的时期。
-
-首先分析为何会进入疲惫期，长时间、重复性、机械性的单一活动肯定会无聊、枯燥、乏味。这是由人的生理构造决定的。
-
-克服疲惫期的方法如下：
-1、休息一段时间，这段时间不要练字，调整一下思绪。所谓休息是为了更好的赶路。
-2、练习其他字体或者换其他字帖。
-    以前练楷书的现在可以练行书、草书、隶书。
-	以前练颜体的现在可以练柳体、欧体。楷书四大家换着学。
-	（楷书四大家：颜柳欧赵。颜真卿、柳公权、欧阳询、赵孟頫。）
-	也可以练练以前未临摹过的字。
-	总之要保持一种新鲜感。
-3、有条件的话，可以学习国画。所谓书画不分家。诗中有画，画中有诗。
-4、读一些关于书法的书籍。腹有诗书气自华。
-5、去博物馆、艺术馆看一些书法名家的字帖，近距离感受艺术的气息。
-6、参加书法活动。向书法大家请教。
+前六个方法记于20210927。
+后三个方法记于20220507。
+记录，温习，更新。再记录，再温习，再更新。
+循环往复，温故知新。朝乾夕惕，生生不息。
 
 ```
+
 
 ---
 
@@ -190,30 +198,32 @@ categories:
 
 #### 2.2.1、练字杂说
 
-> - 练字杂说
+- 练字杂说
 - [ ]  一、坚持每日练习。
-> - 从上周（20210110-20210118）开始不用水写布，每天都是用毛边纸练字，平均早上三张，晚上五张，每天使用八张毛边纸。每张毛边纸有十五格，每格又可分为四小格，能写四个字，即每张纸可写六十个字，每天写四五百字。
-> - 目前基本一天练习八张纸，一周五十多张纸，拍照花费时间较长，比较麻烦且不必要，以后有空再像之前那样把每周的练习照片拍下来。
-> - 现在练字已经是一个习惯了，这四个月以来，基本每天早上七点十五起床（冬天了，起床不易，三个闹铃叫我，七点 小米手环震动提醒，七点十分 手机闹铃，七点十五 天猫精灵唱歌叫我）。然后洗刷、上卫生间、吃早餐--面包饼干苹果（有时是电饭煲煮完粥）。八点十分左右开始练字，练习三四十分钟，三四张纸，再出门上班。
-晚上下班到家时间不定，八九十点都有可能，练习一个小时左右。十一点天猫精灵整点提醒，洗漱、上床玩会手机（看小说、刷头条、看豆瓣、知乎等等）、睡觉。每天睡眠七个多小时。这些是工作日的作息，周末看综艺、看电影比较多，偶尔外出参加活动。但是不论寒暑，不论工作还是放假，早晚练字，已经是一种习惯。**一年之后，持之以恒，希望我的字能拿得出手，能晒出来**。
-> 
->   ---
+- 从上周（20210110-20210118）开始不用水写布，每天都是用毛边纸练字，平均早上三张，晚上五张，每天使用八张毛边纸。每张毛边纸有十五格，每格又可分为四小格，能写四个字，即每张纸可写六十个字，每天写四五百字。
+- 目前基本一天练习八张纸，一周五十多张纸，拍照花费时间较长，比较麻烦且不必要，以后有空再像之前那样把每周的练习照片拍下来。
+- 现在练字已经是一个习惯了，这四个月以来，基本每天早上七点十五起床（冬天了，起床不易，三个闹铃叫我，七点 小米手环震动提醒，七点十分 手机闹铃，七点十五 天猫精灵唱歌叫我）。然后洗刷、上卫生间、吃早餐--面包饼干苹果（有时是电饭煲煮完粥）。八点十分左右开始练字，练习三四十分钟，三四张纸，再出门上班。
+- 下班到家时间不定，八九十点都有可能，练习一个小时左右。十一点天猫精灵整点提醒，洗漱、上床玩会手机（看小说、刷头条、看豆瓣、知乎等等）、睡觉。每天睡眠七个多小时。这些是工作日的作息，周末看综艺、看电影比较多，偶尔外出参加活动。但是不论寒暑，不论工作还是放假，早晚练字，已经是一种习惯。**一年之后，持之以恒，希望我的字能拿得出手，能晒出来**。
+
+---
+  
 - [ ]   二、统计一下练字耗材：
-> - 1、水写布，10元左右，最开始的时候用，目前基本不用了。
-> - 2、墨水，买笔的时候送的两小壶墨水还没用完。前几天又买了一大壶墨水备用。墨水用的慢，平均一个月几块钱，相当于一瓶可乐吧（三元）。
-> - 3、纸，用的是便宜的毛边纸，网上买的，300张15元左右，一张五分钱。一天八张，一月两百四十张。周末可能多写一点。一个月大概四五瓶可乐（十五元）。
-> - 4、笔，这个花费最大，从去年九月至今四个月，买了大概有二十多支毛笔（含买纸赠送的），价格从几元到三十元不等，大部分都是十几元的。这些毛笔质量都不咋的，用不了多长时间毛笔就要分叉，已经用费了十几支。买笔花费近两百元左右。曾经听过一个段子，启功一次买笔就买两百支，用不了多久就要再买。以前以为是吹出来的，现在感觉貌似是真的了，市场上的毛笔质量确实差劲。
-> - 5、毛毡--垫在毛边纸下面；墨碟--相当于砚台（笔墨纸砚的砚）。这两个是买纸或者买笔赠送的。笔架--挂毛笔用的，能挂十支笔，十元左右。《多宝塔碑》字帖，十元左右，这个可以在网上下载电子版的，不过书籍更有感觉。
-> - 6、其他一些辅助性设备，台灯--增加亮度，天猫精灵--听音乐。
-> - 综上，**自学练字**花费不大，笔、墨、纸、砚为必备品，便宜点十元即可在网上买个套餐开始入门练习，如果要立志练字，持之以恒的话，平均每月大概二三十元即可。以后书法有成了，可以用好一点的装备，如宣纸、一得阁的墨水、善琏湖毛笔。
-> 
->   ---
+- 1、水写布，10元左右，最开始的时候用，目前基本不用了。
+- 2、墨水，买笔的时候送的两小壶墨水还没用完。前几天又买了一大壶墨水备用。墨水用的慢，平均一个月几块钱，相当于一瓶可乐吧（三元）。
+- 3、纸，用的是便宜的毛边纸，网上买的，300张15元左右，一张五分钱。一天八张，一月两百四十张。周末可能多写一点。一个月大概四五瓶可乐（十五元）。
+- 4、笔，这个花费最大，从去年九月至今四个月，买了大概有二十多支毛笔（含买纸赠送的），价格从几元到三十元不等，大部分都是十几元的。这些毛笔质量都不咋的，用不了多长时间毛笔就要分叉，已经用费了十几支。买笔花费近两百元左右。曾经听过一个段子，启功一次买笔就买两百支，用不了多久就要再买。以前以为是吹出来的，现在感觉貌似是真的了，市场上的毛笔质量确实差劲。
+- 5、毛毡--垫在毛边纸下面；墨碟--相当于砚台（笔墨纸砚的砚）。这两个是买纸或者买笔赠送的。笔架--挂毛笔用的，能挂十支笔，十元左右。《多宝塔碑》字帖，十元左右，这个可以在网上下载电子版的，不过书籍更有感觉。
+- 6、其他一些辅助性设备，台灯--增加亮度，天猫精灵--听音乐。
+- 综上，**自学练字**花费不大，笔、墨、纸、砚为必备品，便宜点十元即可在网上买个套餐开始入门练习，如果要立志练字，持之以恒的话，平均每月大概二三十元即可。以后书法有成了，可以用好一点的装备，如宣纸、一得阁的墨水、善琏湖毛笔。
+
+---
+  
 - [ ]  三、说说这周（20210118-20210124）新闻。
-> - 这几天八卦比较多，垃圾信息比较严重，尤其是郑爽代孕、弃养风波，头条、知乎上关于这个事件的信息太多。国外方面，美国总统拜登宣布就职，特朗普下台，懂王貌似不甘心，煽动暴力、集会、抗议，然后人走茶凉，被推特禁言，以后的下场估计一言难尽。韩国三星总裁被捕入狱，文在寅真是个斗士。
-国内疫情貌似严重了一点，新增确诊人数增多，政府倡导“春节非必要不返乡”，为了大局稳定，可以理解。河南扇政府秘书长耳光的市委书记被免职，人要制怒、谨慎、不能飘。B站up主“墨茶”年约二十，自幼被父母遗弃，因病因贫而逝，可悲可怜可叹。希望政府、社会能多关注一下弱势群体，能更有温度。
-> - 这周的热搜，垃圾信息集中在娱乐圈，郑爽代孕、弃养风波热闹了好几天，终于自作自受被全面封杀。之后流言四起八卦密集，瓜都吃撑了。华晨宇张碧晨未婚有女，双方发言证实此事。还有一些毁三观的传言，如鹿晗是个yp小能手，男女通吃；黄磊和张子枫睡过；赵丽颖和冯绍峰离婚，孩子不是冯绍峰的。等等流言蜚语，造成三十多位明星集体辟谣。
-虽然这些传言尚未证实，不过空穴来风，未必无因，侧面反映了贵圈真乱。娱乐圈一直是聚光灯所向，名利场之所，八卦密集，良莠不齐，易于乱人心志，毁人三观，确实需要好好管理整顿。对比墨茶之死，直有“朱门酒肉臭，路有冻死骨”之感。
-> - 我们不能约束别人，但是可以规范自己，多读书多学习，少看电视少追星。**勿以恶小而为之，勿以善小而不为**，才能建设一个富强、民主、文明、和谐，自由、平等、公正、法治的社会，才能实现中华民族的伟大复兴。 --20210125
+- 这几天八卦比较多，垃圾信息比较严重，尤其是郑爽代孕、弃养风波，头条、知乎上关于这个事件的信息太多。国外方面，美国总统拜登宣布就职，特朗普下台，懂王貌似不甘心，煽动暴力、集会、抗议，然后人走茶凉，被推特禁言，以后的下场估计一言难尽。韩国三星总裁被捕入狱，文在寅真是个斗士。
+疫情貌似严重了一点，新增确诊人数增多，政府倡导“春节非必要不返乡”，为了大局稳定，可以理解。河南扇政府秘书长耳光的市委书记被免职，人要制怒、谨慎、不能飘。B站up主“墨茶”年约二十，自幼被父母遗弃，因病因贫而逝，可悲可怜可叹。希望政府、社会能多关注一下弱势群体，能更有温度。
+- 这周的热搜，垃圾信息集中在娱乐圈，郑爽代孕、弃养风波热闹了好几天，终于自作自受被全面封杀。之后流言四起八卦密集，瓜都吃撑了。华晨宇张碧晨未婚有女，双方发言证实此事。还有一些毁三观的传言，如鹿晗是个yp小能手，男女通吃；黄磊和张子枫睡过；赵丽颖和冯绍峰离婚，孩子不是冯绍峰的。等等流言蜚语，造成三十多位明星集体辟谣。
+这些传言尚未证实，不过空穴来风，未必无因，侧面反映了贵圈真乱。娱乐圈一直是聚光灯所向，名利场之所，八卦密集，良莠不齐，易于乱人心志，毁人三观，确实需要好好管理整顿。对比墨茶之死，直有“朱门酒肉臭，路有冻死骨”之感。
+- 我们不能约束别人，但是可以规范自己，多读书多学习，少看电视少追星。**勿以恶小而为之，勿以善小而不为**，才能建设一个富强、民主、文明、和谐，自由、平等、公正、法治的社会，才能实现中华民族的伟大复兴。 --20210125
 
 ---
 
@@ -236,32 +246,35 @@ categories:
 
 - 且谈杭州临安房产市场
 
->从春节到现在，三四个月的时间一直关注临安房价，这里大致谈谈杭州临安的房产市场，临安主要分为青山湖、锦北、锦城、锦南、玲珑及几大乡镇（於潜镇、昌化镇、天目山镇、太阳镇、潜川镇等等）。乡镇太远，没去，就不谈房价了。（以下楼盘按临安离杭州从近到远，价格从高到低排序。）
-> - 青山湖距离杭州城区最近，离余杭的未来科技城梦想小镇坐地铁16号线转5号线不过九站，因此房价最贵，均价两万三左右，而且需要摇号，代表楼盘有：**中天珺府（东区）**、越秀星悦城、宝龙旭辉城等等。
-> - 其中青山湖靠近锦城的滨湖新区三大楼盘：**滨湖天地**、**临栖云府**、青山湖畔，第一个靠近农林大学地铁站，价格在两万一以上，且需摇号；后两者离地铁有两三公里，价格在一万八九左右，不用摇号。
-> - 锦城、锦北是临安的城区，价格次之，每平一万九以上，代表楼盘有：中天雅境公寓、**印象苕溪**、锦城学府、锦晟里。
-> - 锦城靠近锦南楼盘有：**美晟府(美好锦玺）**、吴越府、**宝龙新世邸**，单价一万八左右。
-> - 锦南、玲珑价格再次之，一万七八左右，代表楼盘有：**锦云澜天里**、**越秀悦映城**、蓝城江南山庄。 
-> 
-> ---
->综上，临安房价在每平一万七到两万三之间，青山湖需要摇号，其他区域大部分楼盘不用摇号。 <br/>
->临安车位基本在十到十三万之间，买车位有几万的优惠，也可像买房一样先付首付，车位贷分期时间一般在三到十年。 <br/>
->临安目前有16号线地铁，从余杭的绿汀路到临安的九州街，共12站，首站到底站耗时38分钟，于2020年4月开通。 <br/>
-> 
-> ---
->杭州目前十个区（上城区、拱墅区、西湖区、滨江区、萧山区、余杭区、临平区、钱塘区、富阳区、临安区），只有临安不限购，外地户口也可买房。 <br/>
->且临安房价最低，以一字开头，其他区域单价两万的只萧山、富阳有楼盘，余杭、临平最低房价是三万，上城、拱墅、西湖、滨江是杭州主城区，真正一线城市的房价，基本都是四五万以上。 <br/>
->--20210607
+- 春节到现在，三四个月的时间一直关注临安房价，这里大致谈谈杭州临安的房产市场，临安主要分为青山湖、锦北、锦城、锦南、玲珑及几大乡镇（於潜镇、昌化镇、天目山镇、太阳镇、潜川镇等等）。乡镇太远，没去，就不谈房价了。（以下楼盘按临安离杭州从近到远，价格从高到低排序。）
+- 青山湖距离杭州城区最近，离余杭的未来科技城梦想小镇坐地铁16号线转5号线不过九站，因此房价最贵，均价两万三左右，而且需要摇号，代表楼盘有：**中天珺府（东区）**、越秀星悦城、宝龙旭辉城等等。 <br/>
+其中青山湖靠近锦城的滨湖新区三大楼盘：**滨湖天地**、**临栖云府**、青山湖畔，第一个靠近农林大学地铁站，价格在两万一以上，且需摇号；后两者离地铁有两三公里，价格在一万八九左右，不用摇号。
+- 锦城、锦北是临安的城区，价格次之，每平一万九以上，代表楼盘有：中天雅境公寓、**印象苕溪**、锦城学府、锦晟里。 <br/>
+锦城靠近锦南楼盘有：**美晟府(美好锦玺）**、吴越府、**宝龙新世邸**，单价一万八左右。
+- 锦南、玲珑价格再次之，一万七八左右，代表楼盘有：**锦云澜天里**、**越秀悦映城**、蓝城江南山庄。 
 
+---
 
-> **相关网站**
-> - 官网：[浙里办]( https://www.zj.gov.cn/ ) &ensp; [杭州房管局]( http://fgj.hangzhou.gov.cn/col/col1621413/index.html ) &ensp; [杭州临安官网]( http://www.linan.gov.cn/col/col1373420/index.html ) 
-> - 一房一价：[杭州看房网]( https://www.kan3721.com/newhouse/show-1606.html ) &ensp; [杭州房小团]( https://www.huanjutang.com/productHZ.html ) &ensp; [透明售房网]( http://www.tmsf.com/newhouse/property_330191_1245083098_info.htm )
-> - 中介：[居理买房网]( https://hz.julive.com/project/20058518.html ) &ensp; [安居客]( https://hz.fang.anjuke.com/loupan/linan/?from=loupan_index_crumb ) &ensp; [贝壳找房]( https://hz.fang.ke.com/loupan/linan/nha2pg2/#linan )
-> - 房价涨势图：[国家统计局]( https://data.stats.gov.cn/easyquery.htm?cn=E0105 ) &ensp; [房天下]( https://fdc.fang.com/index/baichengindex.aspx )
-> - 采光：[实时阳光]( https://xuanfangyi.com/mscene/112.909097_23.189088_4041_5616 ) &ensp; [楼间距多少才不影响日常采光]( https://www.zhihu.com/search?type=content&q=%E8%AE%A1%E7%AE%97%E6%A5%BC%E9%97%B4%E8%B7%9D%E5%A4%9A%E5%B0%91%E6%89%8D%E4%B8%8D%E5%BD%B1%E5%93%8D%E6%97%A5%E5%B8%B8%E9%87%87%E5%85%89 ) &ensp; [楼房采光间距计算器]( http://tool.cc/other/sunlight.php?lat=30.207899&floor1_num=6&floor1_oh=3&floor2_num=27&floor2_oh=3 ) &ensp; [房屋采光间距计算器]( http://zhqd.shiminjia.com/zhqd/house.php )
-> - 地图：[百度地图]( https://map.baidu.com/ ) &ensp; [高德地图]( https://ditu.amap.com/ )  &ensp; [兰图绘]( http://www.ldmap.net/ ) &ensp; [便民查询-谷歌地图]( https://map.bmcx.com/jinnan__map/ ) &ensp; [地球在线-谷歌地图]( https://www.earthol.com/g/ )
-> - 其他：[买新房要注意哪些事项？]( https://www.zhihu.com/question/20675743 )
+- 综上，临安房价在每平一万七到两万三之间，青山湖需要摇号，其他区域大部分楼盘不用摇号。 <br/>
+临安车位基本在十到十三万之间，买车位有几万的优惠，也可像买房一样先付首付，车位贷分期时间一般在三到十年。 <br/>
+临安目前有16号线地铁，从余杭的绿汀路到临安的九州街，共12站，首站到底站耗时38分钟，于2020年4月开通。 <br/>
+
+---
+
+- 杭州目前十个区（上城区、拱墅区、西湖区、滨江区、萧山区、余杭区、临平区、钱塘区、富阳区、临安区），只有临安不限购，外地户口也可买房。 <br/>
+临安房价最低，以一字开头，其他区域单价两万的只萧山、富阳有楼盘，余杭、临平最低房价是三万，上城、拱墅、西湖、滨江是杭州主城区，真正一线城市的房价，基本都是四五万以上。 <br/>
+--20210607
+
+---
+
+- **相关网站**
+- 官网：[浙里办]( https://www.zj.gov.cn/ ) &ensp; [杭州房管局]( http://fgj.hangzhou.gov.cn/col/col1621413/index.html ) &ensp; [杭州临安官网]( http://www.linan.gov.cn/col/col1373420/index.html ) 
+- 一房一价：[杭州看房网]( https://www.kan3721.com/newhouse/show-1606.html ) &ensp; [杭州房小团]( https://www.huanjutang.com/productHZ.html ) &ensp; [透明售房网]( http://www.tmsf.com/newhouse/property_330191_1245083098_info.htm )
+- 中介：[居理买房网]( https://hz.julive.com/project/20058518.html ) &ensp; [安居客]( https://hz.fang.anjuke.com/loupan/linan/?from=loupan_index_crumb ) &ensp; [贝壳找房]( https://hz.fang.ke.com/loupan/linan/nha2pg2/#linan )
+- 房价涨势图：[国家统计局]( https://data.stats.gov.cn/easyquery.htm?cn=E0105 ) &ensp; [房天下]( https://fdc.fang.com/index/baichengindex.aspx )
+- 采光：[实时阳光]( https://xuanfangyi.com/mscene/112.909097_23.189088_4041_5616 ) &ensp; [楼间距多少才不影响日常采光]( https://www.zhihu.com/search?type=content&q=%E8%AE%A1%E7%AE%97%E6%A5%BC%E9%97%B4%E8%B7%9D%E5%A4%9A%E5%B0%91%E6%89%8D%E4%B8%8D%E5%BD%B1%E5%93%8D%E6%97%A5%E5%B8%B8%E9%87%87%E5%85%89 ) &ensp; [楼房采光间距计算器]( http://tool.cc/other/sunlight.php?lat=30.207899&floor1_num=6&floor1_oh=3&floor2_num=27&floor2_oh=3 ) &ensp; [房屋采光间距计算器]( http://zhqd.shiminjia.com/zhqd/house.php )
+- 地图：[百度地图]( https://map.baidu.com/ ) &ensp; [高德地图]( https://ditu.amap.com/ )  &ensp; [兰图绘]( http://www.ldmap.net/ ) &ensp; [便民查询-谷歌地图]( https://map.bmcx.com/jinnan__map/ ) &ensp; [地球在线-谷歌地图]( https://www.earthol.com/g/ )
+- 其他：[买新房要注意哪些事项？]( https://www.zhihu.com/question/20675743 )
 
 ---
 
@@ -269,14 +282,14 @@ categories:
 
 #### 2.2.3、治疗牙疼小妙招
 
-> 前几天牙齿疼的要命，切实体验了一把：牙疼不是病，疼起来要人命。 <br/>
+- 前几天牙齿疼的要命，切实体验了一把：牙疼不是病，疼起来要人命。 <br/>
 网上搜了一些偏方、小妙招，其中确实有材料常见，方法简单，易于尝试的管用之法。 <br/>
-1、用盐水漱口。相当咸，漱口几次，牙疼稍微缓解。 <br/>
-2、大蒜捣碎，加热，敷于疼痛的牙齿处。这个方法没试过，不好评价。 <br/>
-3、含一片生姜于牙疼处，约十分钟。此法可谓药到病除，含过之后，牙齿就不怎么疼了，配合第四种方法便逐渐痊愈。 <br/>
-4、吃话梅。含生姜之后，吃了一些话梅。不知道治愈牙疼的是生姜还是话梅，或者两者皆有。 <br/>
-5、预防大于治理，治标不如治本。平常要注意牙齿健康，早晚刷牙，不吃少吃辛辣、坚硬、刺激性食物。牙疼严重的话还是要及时就医。 <br/>
->--20210609
+- 1、用盐水漱口。相当咸，漱口几次，牙疼稍微缓解。 <br/>
+- 2、大蒜捣碎，加热，敷于疼痛的牙齿处。这个方法没试过，不好评价。 <br/>
+- 3、含一片生姜于牙疼处，约十分钟。此法可谓药到病除，含过之后，牙齿就不怎么疼了，配合第四种方法便逐渐痊愈。 <br/>
+- 4、吃话梅。含生姜之后，吃了一些话梅。不知道治愈牙疼的是生姜还是话梅，或者两者皆有。 <br/>
+- 5、预防大于治理，治标不如治本。平常要注意牙齿健康，早晚刷牙，不吃少吃辛辣、坚硬、刺激性食物。牙疼严重的话还是要及时就医。 <br/>
+--20210609
 
 
 ```
@@ -296,35 +309,31 @@ categories:
 
 #### 2.2.4、我的三观：**制**恒强变真
 
-```
-我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。
-制：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。
-恒：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。
-强：坚强、自强、自信、自立。
-变：变化，见机行事，随机应变。世上唯一的不变就是变化。
-真：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。
-
-前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。
-若感觉观点太多，信条很杂，只需要记住一个字：制。即可。
+> 我的三观：制恒强变真
 
 
-在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。
-第一条-制怒，实践的比较好，一直都比较冷静平和。
-后三条-强、变、真，也算是身体力行。
-第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙)
+- 我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。 <br/>
+**制**：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。 <br/>
+**恒**：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。<br/>
+**强**：坚强、自强、自信、自立。 <br/>
+**变**：变化，见机行事，随机应变。世上唯一的不变就是变化。 <br/>
+**真**：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。 <br/>
+ 
+- 前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。 <br/>
+若感觉观点太多，信条很杂，只需要记住一个字：制。即可。 <br/>
 
-说一些名言警句（鸡汤）鼓励一下自己：
-东隅已逝，桑榆非晚。
-少壮不努力，老大徒伤悲。
-天下大事，必作于细。天下难事，必作于易。
-种一棵树最好的时间是十年前，其次是现在。
-古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。
-宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。
+- 在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。 <br/>
+第一条-制怒，实践的比较好，一直都比较冷静平和。 <br/>
+后三条-强、变、真，也算是身体力行。 <br/>
+第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙) <br/>
 
---202106
-
-```
-
+- 说一些名言警句（鸡汤）鼓励一下自己： <br/>
+东隅已逝，桑榆非晚。 <br/>
+少壮不努力，老大徒伤悲。 <br/>
+天下大事，必作于细。天下难事，必作于易。 <br/>
+种一棵树最好的时间是十年前，其次是现在。 <br/>
+古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
+宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
 
 ---
 
