--- a/docs/练习/古文诗词.md
+++ b/docs/练习/古文诗词.md
@@ -123,164 +123,181 @@
 
 ### 千字文
 
-```
-千字文 周兴嗣
 
-天地玄黄，宇宙洪荒。日月盈昃，辰宿列张。寒来暑往，秋收冬藏。
-闰馀成岁，律吕调阳。云腾致雨，露结为霜。金生丽水，玉出昆冈。
-剑号巨阙，珠称夜光。果珍李柰，菜重芥姜。海咸河淡，鳞潜羽翔。
-龙师火帝，鸟官人皇。始制文字，乃服衣裳。推位让国，有虞陶唐。
-吊民伐罪，周发殷汤。坐朝问道，垂拱平章。爱育黎首，臣伏戎羌。
-遐迩一体，率宾归王。鸣凤在竹，白驹食场。化被草木，赖及万方。
-盖此身发，四大五常。恭惟鞠养，岂敢毁伤。女慕贞洁，男效才良。
-知过必改，得能莫忘。罔谈彼短，靡恃己长。信使可复，器欲难量。
-墨悲丝染，诗赞羔羊。景行维贤，克念作圣。德建名立，形端表正。
-空谷传声，虚堂习听。祸因恶积，福缘善庆。尺璧非宝，寸阴是竞。
-资父事君，曰严与敬。孝当竭力，忠则尽命。临深履薄，夙兴温凊。
-似兰斯馨，如松之盛。川流不息，渊澄取映。容止若思，言辞安定。
-笃初诚美，慎终宜令。荣业所基，籍甚无竟。学优登仕，摄职从政。
-存以甘棠，去而益咏。乐殊贵贱，礼别尊卑。上和下睦，夫唱妇随。
-外受傅训，入奉母仪。诸姑伯叔，犹子比儿。孔怀兄弟，同气连枝。
-交友投分，切磨箴规。仁慈隐恻，造次弗离。节义廉退，颠沛匪亏。
-性静情逸，心动神疲。守真志满，逐物意移。坚持雅操，好爵自縻。
-都邑华夏，东西二京。背邙面洛，浮渭据泾。宫殿盘郁，楼观飞惊。
-图写禽兽，画彩仙灵。丙舍傍启，甲帐对楹。肆筵设席，鼓瑟吹笙。
-升阶纳陛，弁转疑星。右通广内，左达承明。既集坟典，亦聚群英。
-杜稿钟隶，漆书壁经。府罗将相，路侠槐卿。户封八县，家给千兵。
-高冠陪辇，驱毂振缨。世禄侈富，车驾肥轻。策功茂实，勒碑刻铭。
-磻溪伊尹，佐时阿衡。奄宅曲阜，微旦孰营。桓公匡合，济弱扶倾。
-绮回汉惠，说感武丁。俊乂密勿，多士寔宁。晋楚更霸，赵魏困横。
-假途灭虢，践土会盟。何遵约法，韩弊烦刑。起翦颇牧，用军最精。
-宣威沙漠，驰誉丹青。九州禹迹，百郡秦并。岳宗泰岱，禅主云亭。
-雁门紫塞，鸡田赤城。昆池碣石，巨野洞庭。旷远绵邈，岩岫杳冥。
-治本于农，务资稼穑。俶载南亩，我艺黍稷。税熟贡新，劝赏黜陟。
-孟轲敦素，史鱼秉直。庶几中庸，劳谦谨敕。聆音察理，鉴貌辨色。
-贻厥嘉猷，勉其祗植。省躬讥诫，宠增抗极。殆辱近耻，林皋幸即。
-两疏见机，解组谁逼。索居闲处，沉默寂寥。求古寻论，散虑逍遥。
-欣奏累遣，戚谢欢招。渠荷的历，园莽抽条。枇杷晚翠，梧桐蚤凋。
-陈根委翳，落叶飘摇。游鹍独运，凌摩绛霄。耽读玩市，寓目囊箱。
-易輶攸畏，属耳垣墙。具膳餐饭，适口充肠。饱饫烹宰，饥厌糟糠。
-亲戚故旧，老少异粮。妾御绩纺，侍巾帷房。纨扇圆絜，银烛炜煌。
-昼眠夕寐，蓝笋象床。弦歌酒宴，接杯举觞。矫手顿足，悦豫且康。
-嫡后嗣续，祭祀烝尝。稽颡再拜，悚惧恐惶。笺牒简要，顾答审详。
-骸垢想浴，执热愿凉。驴骡犊特，骇跃超骧。诛斩贼盗，捕获叛亡。
-布射僚丸，嵇琴阮啸。恬笔伦纸，钧巧任钓。释纷利俗，竝皆佳妙。
-毛施淑姿，工颦妍笑。年矢每催，曦晖朗曜。璇玑悬斡，晦魄环照。
-指薪修祜，永绥吉劭。矩步引领，俯仰廊庙。束带矜庄，徘徊瞻眺。
-孤陋寡闻，愚蒙等诮。谓语助者，焉哉乎也。
-```
+> 千字文 周兴嗣
+ 
+天地玄黄，宇宙洪荒。日月盈昃，辰宿列张。寒来暑往，秋收冬藏。<br/>
+闰馀成岁，律吕调阳。云腾致雨，露结为霜。金生丽水，玉出昆冈。<br/>
+剑号巨阙，珠称夜光。果珍李柰，菜重芥姜。海咸河淡，鳞潜羽翔。<br/>
+龙师火帝，鸟官人皇。始制文字，乃服衣裳。推位让国，有虞陶唐。<br/>
+吊民伐罪，周发殷汤。坐朝问道，垂拱平章。爱育黎首，臣伏戎羌。<br/>
+遐迩一体，率宾归王。鸣凤在竹，白驹食场。化被草木，赖及万方。<br/>
+盖此身发，四大五常。恭惟鞠养，岂敢毁伤。女慕贞洁，男效才良。<br/>
+知过必改，得能莫忘。罔谈彼短，靡恃己长。信使可复，器欲难量。<br/>
+墨悲丝染，诗赞羔羊。景行维贤，克念作圣。德建名立，形端表正。<br/>
+空谷传声，虚堂习听。祸因恶积，福缘善庆。尺璧非宝，寸阴是竞。<br/>
+资父事君，曰严与敬。孝当竭力，忠则尽命。临深履薄，夙兴温凊。<br/>
+似兰斯馨，如松之盛。川流不息，渊澄取映。容止若思，言辞安定。<br/>
+笃初诚美，慎终宜令。荣业所基，籍甚无竟。学优登仕，摄职从政。<br/>
+存以甘棠，去而益咏。乐殊贵贱，礼别尊卑。上和下睦，夫唱妇随。<br/>
+外受傅训，入奉母仪。诸姑伯叔，犹子比儿。孔怀兄弟，同气连枝。<br/>
+交友投分，切磨箴规。仁慈隐恻，造次弗离。节义廉退，颠沛匪亏。<br/>
+性静情逸，心动神疲。守真志满，逐物意移。坚持雅操，好爵自縻。<br/>
+都邑华夏，东西二京。背邙面洛，浮渭据泾。宫殿盘郁，楼观飞惊。<br/>
+图写禽兽，画彩仙灵。丙舍傍启，甲帐对楹。肆筵设席，鼓瑟吹笙。<br/>
+升阶纳陛，弁转疑星。右通广内，左达承明。既集坟典，亦聚群英。<br/>
+杜稿钟隶，漆书壁经。府罗将相，路侠槐卿。户封八县，家给千兵。<br/>
+高冠陪辇，驱毂振缨。世禄侈富，车驾肥轻。策功茂实，勒碑刻铭。<br/>
+磻溪伊尹，佐时阿衡。奄宅曲阜，微旦孰营。桓公匡合，济弱扶倾。<br/>
+绮回汉惠，说感武丁。俊乂密勿，多士寔宁。晋楚更霸，赵魏困横。<br/>
+假途灭虢，践土会盟。何遵约法，韩弊烦刑。起翦颇牧，用军最精。<br/>
+宣威沙漠，驰誉丹青。九州禹迹，百郡秦并。岳宗泰岱，禅主云亭。<br/>
+雁门紫塞，鸡田赤城。昆池碣石，巨野洞庭。旷远绵邈，岩岫杳冥。<br/>
+治本于农，务资稼穑。俶载南亩，我艺黍稷。税熟贡新，劝赏黜陟。<br/>
+孟轲敦素，史鱼秉直。庶几中庸，劳谦谨敕。聆音察理，鉴貌辨色。<br/>
+贻厥嘉猷，勉其祗植。省躬讥诫，宠增抗极。殆辱近耻，林皋幸即。<br/>
+两疏见机，解组谁逼。索居闲处，沉默寂寥。求古寻论，散虑逍遥。<br/>
+欣奏累遣，戚谢欢招。渠荷的历，园莽抽条。枇杷晚翠，梧桐蚤凋。<br/>
+陈根委翳，落叶飘摇。游鹍独运，凌摩绛霄。耽读玩市，寓目囊箱。<br/>
+易輶攸畏，属耳垣墙。具膳餐饭，适口充肠。饱饫烹宰，饥厌糟糠。<br/>
+亲戚故旧，老少异粮。妾御绩纺，侍巾帷房。纨扇圆絜，银烛炜煌。<br/>
+昼眠夕寐，蓝笋象床。弦歌酒宴，接杯举觞。矫手顿足，悦豫且康。<br/>
+嫡后嗣续，祭祀烝尝。稽颡再拜，悚惧恐惶。笺牒简要，顾答审详。<br/>
+骸垢想浴，执热愿凉。驴骡犊特，骇跃超骧。诛斩贼盗，捕获叛亡。<br/>
+布射僚丸，嵇琴阮啸。恬笔伦纸，钧巧任钓。释纷利俗，竝皆佳妙。<br/>
+毛施淑姿，工颦妍笑。年矢每催，曦晖朗曜。璇玑悬斡，晦魄环照。<br/>
+指薪修祜，永绥吉劭。矩步引领，俯仰廊庙。束带矜庄，徘徊瞻眺。<br/>
+孤陋寡闻，愚蒙等诮。谓语助者，焉哉乎也。<br/>
+
 
 
 ## 二、十首宋词
 
-```
-1、满江红
-岳飞
-怒发冲冠，凭阑处、潇潇雨歇。 
-抬望眼，仰天长啸，壮怀激烈。 
-三十功名尘与土，八千里路云和月。 
-莫等闲、白了少年头，空悲切。
-靖康耻，犹未雪;臣子恨，何时灭。 
-驾长车踏破，贺兰山缺。 
-壮志饥餐胡虏肉，笑谈渴饮匈奴血。
-待从头、收拾旧江山，朝天阙。
 
-2、水调歌头·中秋
-苏轼
-明月几时有?把酒问青天。
-不知天上宫阙，今夕是何年。
-我欲乘风归去，又恐琼楼玉宇，高处不胜寒。
-起舞弄清影，何似在人间!
-转朱阁，低绮户，照无眠。
-不应有恨，何事长向别时圆?
-人有悲欢离合，月有阴睛圆缺，此事古难全。
-但愿人长久，千里共蝉娟。
+> 1、满江红 - 岳飞
 
-3、念奴娇·赤壁怀古
-苏轼
-大江东去，浪淘尽，千古风流人物。
-故垒西边，人道是、三国周郎赤壁。
-乱石穿空，惊涛拍岸，卷起千堆雪。
-江山如画，一时多少豪杰。
-遥想公谨当年，小乔初嫁了，雄姿英发。
-羽扇纶巾，谈笑间、樯橹灰飞烟灭。
-故国神游，多情应笑我，早生华发，
-人生如梦，一尊还酹江月。
+怒发冲冠，凭阑处、潇潇雨歇。<br/>
+抬望眼，仰天长啸，壮怀激烈。<br/>
+三十功名尘与土，八千里路云和月。<br/>
+莫等闲、白了少年头，空悲切。<br/>
+靖康耻，犹未雪;臣子恨，何时灭。<br/>
+驾长车踏破，贺兰山缺。<br/>
+壮志饥餐胡虏肉，笑谈渴饮匈奴血。<br/>
+待从头、收拾旧江山，朝天阙。<br/>
 
-4、江城子 乙卯正月二十日夜记梦
-苏轼
-十年生死两茫茫。
-不思量，自难忘。
-千里孤坟，无处话凄凉。
-纵使相逢应不识，
-尘满面，鬓如霜。
-夜来幽梦忽还乡。
-小轩窗，正梳妆。
-相顾无言，惟有泪千行。
-料得年年肠断处，
-明月夜，短松冈。
+   <br/>
+ 
+> 2、水调歌头·中秋 - 苏轼
 
-5、永遇乐·京口北固亭怀古
-辛弃疾
-千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被雨打风吹去。
-斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。
-元嘉草草，封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。
-可堪回首，佛狸祠下，一片神鸦社鼓。凭谁问，廉颇老矣，尚能饭否？
+明月几时有?把酒问青天。<br/>
+不知天上宫阙，今夕是何年。<br/>
+我欲乘风归去，又恐琼楼玉宇，高处不胜寒。<br/>
+起舞弄清影，何似在人间!<br/>
+转朱阁，低绮户，照无眠。<br/>
+不应有恨，何事长向别时圆?<br/>
+人有悲欢离合，月有阴睛圆缺，此事古难全。<br/>
+但愿人长久，千里共蝉娟。<br/>
+ 
+  <br/>
 
-6、青玉案·元夕
-辛弃疾
-东风夜放花千树，更吹落，星如雨。
-宝马雕车香满路。
-凤箫声动，玉壶光转，一夜鱼龙舞。
-蛾儿雪柳黄金缕，笑语盈盈暗香去。
-众里寻他千百度，蓦然回首，那人却在灯火阑珊处。
+> 3、念奴娇·赤壁怀古 - 苏轼
+
+大江东去，浪淘尽，千古风流人物。<br/>
+故垒西边，人道是、三国周郎赤壁。<br/>
+乱石穿空，惊涛拍岸，卷起千堆雪。<br/>
+江山如画，一时多少豪杰。<br/>
+遥想公谨当年，小乔初嫁了，雄姿英发。<br/>
+羽扇纶巾，谈笑间、樯橹灰飞烟灭。<br/>
+故国神游，多情应笑我，早生华发，<br/>
+人生如梦，一尊还酹江月。<br/>
+
+  <br/>
+ 
+> 4、江城子 乙卯正月二十日夜记梦 - 苏轼
+
+十年生死两茫茫。<br/>
+不思量，自难忘。<br/>
+千里孤坟，无处话凄凉。<br/>
+纵使相逢应不识，<br/>
+尘满面，鬓如霜。<br/>
+夜来幽梦忽还乡。<br/>
+小轩窗，正梳妆。<br/>
+相顾无言，惟有泪千行。<br/>
+料得年年肠断处，<br/>
+明月夜，短松冈。<br/>
+
+  <br/>
+ 
+> 5、永遇乐·京口北固亭怀古 - 辛弃疾
+
+千古江山，英雄无觅，孙仲谋处。舞榭歌台，风流总被雨打风吹去。<br/>
+斜阳草树，寻常巷陌，人道寄奴曾住。想当年，金戈铁马，气吞万里如虎。<br/>
+元嘉草草，封狼居胥，赢得仓皇北顾。四十三年，望中犹记，烽火扬州路。<br/>
+可堪回首，佛狸祠下，一片神鸦社鼓。凭谁问，廉颇老矣，尚能饭否？<br/>
+ 
+  <br/>
+ 
+> 6、青玉案·元夕 - 辛弃疾
+
+东风夜放花千树，更吹落，星如雨。<br/>
+宝马雕车香满路。<br/>
+凤箫声动，玉壶光转，一夜鱼龙舞。<br/>
+蛾儿雪柳黄金缕，笑语盈盈暗香去。<br/>
+众里寻他千百度，蓦然回首，那人却在灯火阑珊处。<br/>
+
+  <br/>
+  
+> 7、桂枝香·金陵怀古 - 王安石
+
+登临送目，正故国晚秋，天气初肃。<br/>
+千里澄江似练，翠峰如簇。<br/>
+归帆去棹残阳里，背西风，酒旗斜矗。<br/>
+彩舟云淡，星河鹭起，画图难足。<br/>
+念往昔，繁华竞逐，叹门外楼头，悲恨相续。<br/>
+千古凭高对此，谩嗟荣辱。<br/>
+六朝旧事随流水，但寒烟衰草凝绿。<br/>
+至今商女，时时犹唱，后庭遗曲。<br/>
+
+  <br/>
+ 
+> 8、鹊桥仙 - 秦观
+
+纤云弄巧，飞星传恨，<br/>
+银汉迢迢暗度。<br/>
+金风玉露一相逢，<br/>
+便胜却、人间无数。<br/>
+柔情似水，佳期如梦，<br/>
+忍顾鹊桥归路。<br/>
+两情若是久长时，<br/>
+又岂在、朝朝暮暮。<br/>
+
+  <br/>
+ 
+> 9、虞美人 - 李煜
+
+春花秋月何时了，<br/>
+往事知多少。<br/>
+小楼昨夜又东风，<br/>
+故国不堪回首月明中。<br/>
+雕栏玉砌应犹在，<br/>
+只是朱颜改。<br/>
+问君能有几多愁，<br/>
+恰似一江春水向东流。<br/>
+
+  <br/>
+ 
+> 10、一剪梅 - 李清照
+
+红藕香残玉簟秋。<br/>
+轻解罗裳，独上兰舟。<br/>
+云中谁寄锦书来?<br/>
+雁字回时，月满西楼。<br/>
+花自飘零水自流。<br/>
+一种相思，两处闲愁。<br/>
+此情无计可消除，<br/>
+才下眉头，却上心头。<br/>
 
 
-7、桂枝香·金陵怀古
-王安石
-登临送目，正故国晚秋，天气初肃。
-千里澄江似练，翠峰如簇。
-归帆去棹残阳里，背西风，酒旗斜矗。
-彩舟云淡，星河鹭起，画图难足。
-念往昔，繁华竞逐，叹门外楼头，悲恨相续。
-千古凭高对此，谩嗟荣辱。
-六朝旧事随流水，但寒烟衰草凝绿。
-至今商女，时时犹唱，后庭遗曲。
-
-8、鹊桥仙
-秦观
-纤云弄巧，飞星传恨，
-银汉迢迢暗度。
-金风玉露一相逢，
-便胜却、人间无数。
-柔情似水，佳期如梦，
-忍顾鹊桥归路。
-两情若是久长时，
-又岂在、朝朝暮暮。
-
-9、虞美人
-李煜
-春花秋月何时了，
-往事知多少。
-小楼昨夜又东风，
-故国不堪回首月明中。
-雕栏玉砌应犹在，
-只是朱颜改。
-问君能有几多愁，
-恰似一江春水向东流。
-
-10、一剪梅
-李清照
-红藕香残玉簟秋。
-轻解罗裳，独上兰舟。
-云中谁寄锦书来?
-雁字回时，月满西楼。
-花自飘零水自流。
-一种相思，两处闲愁。
-此情无计可消除，
-才下眉头，却上心头。
-
-```
 
 ## 三、古诗词赋百首
 
