--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -2474,6 +2474,21 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 ```
 
+#### 2.3.5、202205
+
+
+- [x] 82、20220509
+
+![img337]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050201.jpg )
+![img338]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050401.jpg )
+
+---
+
+![img339]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050601.jpg )
+![img340]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202205/2022050801.jpg )
+
+- just do it.  人生苦短，想做就做。--20220508
+
 ---
 
 <div STYLE="page-break-after: always;"></div>
