--- a/docs/练习/徐书法.md
+++ b/docs/练习/徐书法.md
@@ -67,7 +67,9 @@
 
 > 博客网站
 
-```生活随笔-编程笔记-书法练习轨迹```
+```
+生活随笔-编程笔记-书法练习轨迹
+```
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
@@ -79,7 +81,9 @@
 
 > 主题网站
 
-```使用vuepress、docsify、mkdocs等工具构建的不同主题不同域名的个人网站```
+```
+使用vuepress、docsify、mkdocs等工具构建的不同主题不同域名的个人网站
+```
 
 | 序号   | 我的网站    |  备注          |
 | -----  | ----------- |  ------------- |
@@ -93,7 +97,9 @@
 
 > 网站仓库
 
-```《书法练习轨迹》博客网站及git仓库```
+```
+《书法练习轨迹》博客网站及git仓库
+```
 
 | 序号 | 类型       | 我的网站 | git静态网页 | git仓库 | 布署方法 | <span style="white-space:nowrap;">备注&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;&emsp;</span> |
 | ---  | ---------- | -------- | ----------- | ------- | -------- | ------------------------------------ |
