--- a/docs/轨迹/诗词杂句.md
+++ b/docs/轨迹/诗词杂句.md
@@ -11,7 +11,6 @@
 半生有感 <br />
 龙骨山上风车横，转去庐州蜀山风。<br />
 十年一觉世不同，西湖水清临安梦。<br />
-
 `--202105`
 
 ---
@@ -21,7 +20,6 @@
 漫漫人生三十已。 <br />
 若论何事挂心头， <br />
 书法练习轨迹有。 <br />
-
 `--20210712`
 
 ---
@@ -34,7 +32,6 @@
 免费景点，游人如织。 <br />
 交通拥堵，绿色出行。 <br />
 保护环境，人人有责。 <br />
-
 `--202111`
 
 ---
@@ -46,7 +43,6 @@
 躺平易，奋斗难。 <br />
 生存易，生活难。 <br />
 平凡易，伟大难。 <br />
-
 `--20211102`
 
 ---
@@ -69,7 +65,6 @@
 记我所记，感我所感。 <br />
 运到功成，顺其自然。 <br />
 自知者明，知足常乐。 <br />
-
 `--20220103`
 
 ---
@@ -79,122 +74,127 @@
 永世难忘撞南墙。 <br />
 钦敬夸父逐日光， <br />
 书就精卫填海浪。 <br />
-
 `--20220112`
 
 ---
 
 ## 2、杂句
 
-```
-我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。
-制：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。
-恒：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。
-强：坚强、自强、自信、自立。
-变：变化，见机行事，随机应变。世上唯一的不变就是变化。
-真：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。
+我的三观：制恒强变真
 
-前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。
-若感觉观点太多，信条很杂，只需要记住一个字：制。即可。
---202106
+我的三观：人生观、世界观、价值观，亦即人生信条、五字真言：制 恒 强 变 真。 <br/>
+**制**：制怒、自制、克制，不冲动、不贪婪，任何时候都要保持冷静，泰山崩于前而色不变。心平气和才能修身养性。 <br/>
+**恒**：持之以恒，学习任何知识、技能都要长久的奋斗，坚持就是胜利。<br/>
+**强**：坚强、自强、自信、自立。 <br/>
+**变**：变化，见机行事，随机应变。世上唯一的不变就是变化。 <br/>
+**真**：真诚、真实。待人以诚、待己以真。认识自己，了解自己的优点缺点，知道自己要干什么。世上乱花迷人眼，需要仔细甄别，方能去伪存真。 <br/>
+ 
+前三条（制、恒、强）是对内，对自己，后两条（变 真）是对外，对别人。只有内外兼修，审慎笃行，两手都要抓，两手都要硬，才能辨别真伪，提高自身。 <br/>
+若感觉观点太多，信条很杂，只需要记住一个字：制。即可。 <br/>
 
-```
+在高中的某一天，突然醒悟了以上五字真言，这些年为人处世基本照此原则，不破藩篱。 <br/>
+第一条-制怒，实践的比较好，一直都比较冷静平和。 <br/>
+后三条-强、变、真，也算是身体力行。 <br/>
+第二条-恒 。。。 世间之事，知易行难。行百里者，半途而废者九十。小丑竟是我自己。(⊙︿⊙) <br/>
+
+
+说一些名言警句（鸡汤）鼓励一下自己： <br/>
+东隅已逝，桑榆非晚。 <br/>
+少壮不努力，老大徒伤悲。 <br/>
+天下大事，必作于细。天下难事，必作于易。 <br/>
+种一棵树最好的时间是十年前，其次是现在。 <br/>
+古今成大事者，不唯有超世之才，亦必有坚韧不拔之志。 <br/>
+宠辱不惊，看庭前花开花落;去留无意，望天上云卷云舒。 `--202106` <br/> 
+
 
 ---
 
-```
-人情必有所寄，然后能静，能定，能乐。
-寄于山水，得之旷达。
-寄于明月，得之幽深。
-寄于诗词文章，得之文华。
-寄于琴棋书画，得之才气。
---20210611
 
-```
+人情必有所寄，然后能静，能定，能乐。 <br/>
+寄于山水，得之旷达。 <br/>
+寄于明月，得之幽深。 <br/>
+寄于诗词文章，得之文华。 <br/>
+寄于琴棋书画，得之才气。 <br/>
+`--20210611`
+
 
 ---
 
-```
-一生只做一件事，一生做好一件事。 --20210801
 
-在我生前，流传的是别人的故事。
-在我生后，世界会流传我的故事。
+一生只做一件事，一生做好一件事。 `--20210801` <br/>
 
-漫漫前路，来日方长。
-生亦何欢，死亦何惧。
-无愧于心，无惧于行。
-脚踏实地，持续向前。
+在我生前，流传的是别人的故事。 <br/>
+在我生后，世界会流传我的故事。 <br/>
 
-```
+漫漫前路，来日方长。 <br/>
+生亦何欢，死亦何惧。 <br/>
+无愧于心，无惧于行。 <br/>
+脚踏实地，持续向前。 <br/>
+
 
 ---
 
-```
-三不三观
-友谊观：不打扰
-恋爱观：不将就
-人生观：不作恶
---2021.10.19
 
-```
+三不三观 <br/>
+友谊观：不打扰 <br/>
+恋爱观：不将就 <br/>
+人生观：不作恶 <br/>
+`--2021.10.19` <br/>
+
 
 ---
 
-```
-推己及人，有些个人的教训总结。
-1、按章交税，遵纪守法。不要贪婪，保持克制。
-2、金钱很重要，但是有许多东西更重要，如健康、信仰、自由、名誉、家人、朋友等等。
-3、社会很复杂，害人之心不可有，防人之心不可无。
-4、洁身自好，谨言慎行。不嫖不赌不狂不乱。保持谦逊，低调做人。
-5、不要过度压抑自己，找一个兴趣爱好，寄情于此，坚持练习。
-6、专业技能要深入，干一行，爱一行，专一行。
-7、人生是一场马拉松，是漫长的，不要在意一时一刻的得失。
-8、生命犹如白驹过隙，是短暂的，要珍惜，要做有意义的事。
-9、道理是空洞的，听的再多不如亲自体验一次。
-10、强迫症害死人，人生不会完美，要乐观豁达，坚持学习。
---20220116
 
-```
+推己及人，有些个人的教训总结。 <br/>
+1、按章交税，遵纪守法。不要贪婪，保持克制。 <br/>
+2、金钱很重要，但是有许多东西更重要，如健康、信仰、自由、名誉、家人、朋友等等。 <br/>
+3、社会很复杂，害人之心不可有，防人之心不可无。 <br/>
+4、洁身自好，谨言慎行。不嫖不赌不狂不乱。保持谦逊，低调做人。 <br/>
+5、不要过度压抑自己，找一个兴趣爱好，寄情于此，坚持练习。 <br/>
+6、专业技能要深入，干一行，爱一行，专一行。 <br/>
+7、人生是一场马拉松，是漫长的，不要在意一时一刻的得失。 <br/>
+8、生命犹如白驹过隙，是短暂的，要珍惜，要做有意义的事。 <br/>
+9、道理是空洞的，听的再多不如亲自体验一次。 <br/>
+10、强迫症害死人，人生不会完美，要乐观豁达，坚持学习。 <br/>
+`--20220116`
+
 
 ---
 
-```
-人要经常思考并且善于思考，要认清自我，清楚自己的缺点，优点，明白自己的机会，威胁与过失。人贵有自知之明，自制之力，自强之心，此之谓大丈夫。
- ——于车上
-2013年1月12日
 
-生活是一条大河
-2014年3月12日
+人要经常思考并且善于思考，要认清自我，清楚自己的缺点，优点，明白自己的机会，威胁与过失。人贵有自知之明，自制之力，自强之心，此之谓大丈夫。 <br/>
+ ——于车上 <br/>
+`2013年1月12日` <br/>
 
-远处是山，近处是水，有山有水，山水相连。未来是画，现在是笔，画好画坏，全在笔端。
-2015年11月17日
+生活是一条大河 <br/>
+`2014年3月12日` <br/>
+
+远处是山，近处是水，有山有水，山水相连。未来是画，现在是笔，画好画坏，全在笔端。 <br/>
+`2015年11月17日` <br/>
 
 
-以上三句记于本人QQ空间日志，今录于此。温故知新，三思后行。
---20220215
+以上三句记于本人QQ空间日志，今录于此。温故知新，三思后行。 <br/>
+`--20220215`
 
-```
-
----
-
-```
-耽于名利者，必为名利所困。
-耽于声色犬马者，必为声色犬马所困。
-为人须纯粹，方能有所进。
-为人须专注，方能有所为。
-为人须用心，方能有所不为。
---20220307
-
-```
 
 ---
 
-```
-坚韧不拔：坚定 坚持 坚韧 坚毅 坚强。
-自强不息：自制 自立 自信 自强 自我。
---20220406
 
-```
+耽于名利者，必为名利所困。 <br/>
+耽于声色犬马者，必为声色犬马所困。 <br/>
+为人须纯粹，方能有所进。 <br/>
+为人须专注，方能有所为。 <br/>
+为人须用心，方能有所不为。 <br/>
+`--20220307`
+
+
+---
+
+
+坚韧不拔：坚定 坚持 坚韧 坚毅 坚强。 <br/>
+自强不息：自制 自立 自信 自强 自我。 <br/>
+`--20220406`
+
 
 ---
 
