--- a/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -984,7 +984,6 @@
 
 
 ```
-
 人情必有所寄，然后能静，能定，能乐。
 寄于山水，得之旷达。
 寄于明月，得之幽深。
@@ -2513,6 +2512,30 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 衣带渐宽终不悔，为伊消得人憔悴。<br />
 众里寻他千百度，蓦然回首，那人却在，灯火阑珊处。<br />
 
+---
+
+- 修仙
+
+- 练气 筑基 金丹 
+- 元婴 出窍 化神
+- 炼虚 合体 大乘
+
+---
+
+- 修真
+
+- 炼精化气
+- 炼气化神
+- 炼神还虚
+- 炼虚合道
+
+---
+
+- 学历
+
+- 小学 初中 高中
+- 大专 本科 硕士 博士
+
 
 ---
 
@@ -2648,3 +2671,5 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 | 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 ***
+
+
