--- a/docs/练习/关于我.md
+++ b/docs/练习/关于我.md
@@ -4,7 +4,11 @@
 
 徐永钦<br/>
 生于无为，学于合肥，居于杭州。<br/>
-君子固穷，记而不作，未来已来。<br/>
+程序开发，书法练习，上下求索。<br/>
+君子不器，学且与思，知行合一。<br/>
+温故知新，记而不作，未来已来。<br/>
+
+---
 
 九零后，程序员，热爱生活、乐于记录的普通青年。<br/>
 
