--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -2635,6 +2635,16 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 真正要做的事，连神明也不要说。<br/>
 明心见性，谨守本心。<br/>
 
+---
+
+- [x] 88、20220620
+
+![img351]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022061501.jpg )
+![img352]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022061701.jpg )
+
+读万卷书，不如行万里路。<br/>
+丰碑无语，行胜于言。<br/>
+
 
 <div STYLE="page-break-after: always;"></div>
 
