--- a/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2055,7 +2055,6 @@ flomo = flow + memo
 
 - 能事不受相促迫，王宰始肯留真迹。 --20220123
 
-
 ---
 
 - [x] 69、20220131
@@ -2065,7 +2064,6 @@ flomo = flow + memo
 
 
 ```
-
 ​今天是大年三十啦[微笑][微笑]我在此🙏 祝🌟朋友及家人✨💘 2022💘 ✨🌟 新的一年🎵 ✨✨🌵 一帆風順⛵🎏 ✨✨💐 二龍騰飛✈🚀 ✨✨🌷 三羊開泰🌅 🎆 ✨✨🍀 四季平安🌈 🎑 ✨✨🌺 五福臨門😄 💪 ✨✨🌻 六六大順🎉 🎯 ✨✨🌹 七星高照🙏 🎇 ✨✨💐 八方來財🏧 💰 ✨✨🌷 九九同心💏 🎎 ✨✨☀ 十全十美🙌 🈵 ✨✨🌸 百事亨通👏 🎰 ✨✨🌺 千事吉祥🉐 ☀✨✨🍀 萬事如意🎐 👍 ✨✨
 
 ✨🌟 ✨✨✨✨✨✨✨🌟 祝大家好运连连 ！虎年大吉！
@@ -2259,7 +2257,6 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 与天奋斗，其乐无穷！与地奋斗，其乐无穷！与人奋斗，其乐无穷！
 ```
 
-
 ---
 
 - [x] 75、20220321
@@ -2287,9 +2284,7 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 二、人生如练字，需要不疾不徐，不骄不躁。提醒自己要慢下来，静下去。 <br/>
 三、古有“书圣”“颜体”，高山仰止，今有“徐书法”见贤思齐。十年如一日，徐徐练习，徐书必有法。 <br/>
 
-
 ---
-
 
 - [x] 76、20220328
 
@@ -2318,7 +2313,6 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 ---
 
 #### 2.3.4、202204
-
 
 - [x] 77、20220404
 
@@ -2435,8 +2429,6 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 - [img333]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/2022042301.jpg )
 - [img334]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202204/20220423011.jpg )
-
-
 
 
 - 上海市卫健委今早（24日）通报：2022年4月23日0—24时，新增本土新冠肺炎确诊病例1401例和无症状感染者19657例，其中541例确诊病例为此前无症状感染者转归，816例确诊病例和19421例无症状感染者在隔离管控中发现，其余在相关风险人群排查中发现。  详见： [新华网]( https://www.toutiao.com/article/7089951013922144808 ) [环球网]( https://www.toutiao.com/article/7089952195746988547 )
@@ -2645,6 +2637,17 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 读万卷书，不如行万里路。<br/>
 丰碑无语，行胜于言。<br/>
 
+---
+
+- [x] 89、20220627
+
+- [img353]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022062101.jpg )
+- [img354]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022062301.jpg )
+
+现在不过是六月份，杭州天气就达到三十六七度，真热啊。<br/>
+空调真是伟大的发明。要是给常用电器排名我觉得是：空调>手机>电脑>洗衣机>热水器>冰箱>风扇>电饭锅。。。<br/>
+科技改善生活，科学创造未来。<br/>
+
 
 <div STYLE="page-break-after: always;"></div>
 
@@ -2780,8 +2783,8 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 
 | 徐书法 | 地址        |  备注          |
 | -----  | ----------- |  ------------- |
-| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习网站。 |
-| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。 |
+| 1      | [xushufa.cn]( https://xushufa.cn )            | 书法练习轨迹网站。                   |
+| 2      | [blog.xushufa.cn]( https://blog.xushufa.cn )  | `vuepress`构建的博客网站。           |
 | 3      | [web.xushufa.cn]( https://web.xushufa.cn )    | `vuepress-theme-reco`构建的博客网站。|
 
 ***
