--- a/docs/练习/书法练习轨迹--明月几时有.md
+++ b/docs/练习/书法练习轨迹--明月几时有.md
@@ -2648,6 +2648,49 @@ https://xyqin.coding.net/p/my/d/document/git/raw/master/imgs/other/color2.jpg
 空调真是伟大的发明。要是给常用电器排名我觉得是：空调>手机>电脑>洗衣机>热水器>冰箱>风扇>电饭锅。。。<br/>
 科技改善生活，科学创造未来。<br/>
 
+---
+
+- [x] 90、20220704
+
+![img355]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022062801.jpg )
+![img356]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202206/2022063001.jpg )
+
+周末（2022-07-03）参加了一场“读书会”，台上有人分享，台下听完讨论。<br>
+三场分享之后才知道这是一场夹杂私活兜售观点隐蔽销售的广告会。真是高啊，不过也算涨见识了。<br>
+总而言之，这场会议涉及到南北饮食差异、内蒙寒冷气候，新时代轻重资产投资、抖音探店模式，中女时代、女权思想等等。<br>
+虽然不是纯粹的读书分享讨论会，但是不同思想的火花碰撞，不同人物的独到见解，还是相当精彩的。<br>
+世界要求同存异，人要海乃百川，胸怀广阔，才能去芜存菁，更上一层楼。<br>
+
+完会之后去了市民中心的杭州图书馆，顺手拿了一本《中国流行音乐演唱风格研究（1980-2010）》，认真阅读了一两个小时。<br>
+不禁为作者王韠[bì]的严谨、博学、认真、求实的态度所感佩，这才是专业书籍，这才是当代认真做学问的人。<br>
+人要多读书，读好书，书籍是人类进步的阶梯。<br>
+`--20220704`
+
+---
+
+#### 2.3.7、202207
+
+- [x] 91、20220711
+
+![img357]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022070501.jpg )
+![img358]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202207/2022070901.jpg )
+
+山坡羊·潼关怀古<br>
+元 张养浩<br>
+峰峦如聚，波涛如怒，<br>
+山河表里潼关路。<br>
+望西都，意踌躇。<br>
+伤心秦汉经行处，<br>
+宫阙万间都做了土。<br>
+兴，百姓苦；<br>
+亡，百姓苦。<br>
+
+<br />
+
+I think, therefore I am.<br>
+我思故我在。<br>
+
+---
 
 <div STYLE="page-break-after: always;"></div>
 
