--- a/docs/轨迹/诗词杂句.md
+++ b/docs/轨迹/诗词杂句.md
@@ -227,6 +227,18 @@
 
 ---
 
+万物逆旅，光阴过客。<br>
+浮生若梦，为欢几何。<br>
+白驹过隙，人生苦短。<br>
+逝者如斯，无愧于心。<br>
+
+做自己喜欢的事。<br>
+用自己的方式过完一生。<br>
+
+`--20220725`
+
+---
+
 ## 3、作者
 
 徐永钦<br/>
