--- a/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
+++ b/docs/轨迹/书法练习轨迹--明月几时有-无图版.md
@@ -2762,6 +2762,43 @@ I think, therefore I am.<br>
 穷则变，变则通，通则久。久则固，固则穷，穷则变。<br>
 
 
+---
+
+- [x] 97、20220822
+
+- [img368]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022081601.jpg )
+- [img369]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022081801.jpg )
+
+知之为知之，不知为不知，是知也。<br>
+情深不寿，慧极必伤。<br>
+难得糊涂。<br>
+
+---
+
+- [x] 98、20220829
+
+- [img370]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202208/2022082501.jpg )
+
+罗卡定律：凡有接触，必留痕迹。<br>
+凡两个物体接触，会产生转移现象。既会带走一些东西，亦会留下一些东西。<br>
+with contact between two items, there will always be an exchange.<br>
+——法证之父艾德蒙·罗卡，法国法医学家、犯罪学家艾德蒙·罗卡。<br>
+
+---
+
+#### 2.3.9、202209
+
+- [x] 99、20220905
+
+- [img371]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202209/2022090101.jpg )
+- [img372]( https://gitcode.net/xu180/imgs/-/raw/master/mingyue/2022/202209/2022090301.jpg )
+
+一切都会好起来的。<br>
+一切历史都是当代史。<br>
+一切有为法如梦幻泡影。<br>
+
+
+
 <div STYLE="page-break-after: always;"></div>
 
 ## 三、作者
